--- a/project/index.html
+++ b/project/index.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="stylesheet" href="../styles.css">
+    <!-- Подключаем файл стилей -->
 </head>
 
 <body>
     <h1>Login</h1>
-    <form id="loginForm">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email"><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <button type="submit" id="loginButton">Sign In</button>
+    <form id="loginForm" class="login-form"> <!-- Добавляем класс "login-form" -->
+        <label for="email" class="form-label">Email:</label><br>
+        <input type="email" id="email" name="email" class="form-input"><br> <!-- Добавляем класс "form-input" -->
+        <label for="password" class="form-label">Password:</label><br>
+        <input type="password" id="password" name="password" class="form-input"><br><br>
+        <!-- Добавляем класс "form-input" -->
+        <button type="submit" id="loginButton" class="form-button">Sign In</button>
+        <!-- Добавляем класс "form-button" -->
     </form>
 
     <script>
